--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,7 +61,7 @@ function resultado_onclick()
         	
 var perfTime = performance.now();
 n =Math.ceil(gammaFn(n) / Math.LN10);
-document.getElementById("perfTime").innerText ="This tooks " + (performance.now() - perfTime) + " milliseconds.";
+document.getElementById("perfTime").innerText ="Obtener este resultado tomó " + (performance.now() - perfTime) + " millisegundos.";
 return n;
         }
     };
