--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,6 +67,7 @@ return n;
     };
 return calculator.gammaFn(parseInt(document.getElementById("resultado").value));
 }
+document.getElementById("perfTime").innerText ="Por favor coloque el número para realizar este cálculo";
 //-->
 </script>
     <script>
