--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html>
   <head>
-    <title>Gamma Function</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	  <meta charset="UTF-8"/>
+	  <title>Gamma Function</title>
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
   <body>
-    <div id="perfTime">Loading...</div>
+	  <div id="perfTime">Por favor coloque el número para realizar este cálculo</div>
 
 <form>
     
 <table style="text-align:center;">
 	<tr style="text-align:center;">
 		<td colspan = "4">
-			<input id="resultado" type="text" value="0" size="20" style="border: 3px solid blue; padding: 10px;" /><input id="memoria" type="hidden" value="0" />
+			<input id="resultado" type="text" value="0" size="20" style="border: 3px solid blue; padding: 10px;" />
 		</td>
 	</tr>
 
 	<tr style="text-align:center;">
 		<td colspan = "4">
 		<input type="button" value="log10(n!)"
-		  onClick="document.getElementById('resultado').value =resultado_onclick(); return false;"
+		  onClick="resultado_onclick(); return false;"
 		  style="width:110px">
 		</td>
 	</tr>
@@ -34,51 +35,26 @@
 var
 M_GAMMA = [76.18009172947146, -86.50532032941677, 24.01409824083091, -1.231739572450155, 0.1208650973866179e-2, -0.5395239384953e-5],
 M_GAMMAS = 6;
-function gammaFn(x)
-{
-var i = 0, n = ++x, tmp = x + 5.5, ser = 1.000000000190015;
-for (tmp -= (x + 0.5) * Math.log(tmp); i < M_GAMMAS; ++i) ser += M_GAMMA [i] / ++n;
-return Math.log(2.5066282746310005 * ser / x) - tmp;
+function gammaLog10(x) {
+
+	var i = 0, n = ++x, tmp = x + 5.5, ser = 1.000000000190015;
+	for (tmp -= (x + 0.5) * Math.log(tmp); i < M_GAMMAS; ++i) ser += M_GAMMA [i] / ++n;
+	return Math.ceil((Math.log(2.5066282746310005 * ser / x) - tmp) / Math.LN10);
 }
-function fact(x) { return x > 1 ? Math.exp(gammaFn(x)) : 1 }
-function combin(n, k) { return (Math.exp(gammaFn(n) - gammaFn(n - k) - gammaFn(k)) + 0.5) | 0 } // Ms Excel COMBIN() n! / k!(n - k)!
-//n = 49; k = 6; alert(fact(n) + ' ' + fact(k) + ' ' + combin(n, k)); // Lottery odds! (13,983,816)
-//alert(Math.log(2.7182));
-//alert(gammaFn(10))
-if (!Date.now) {
-    Date.now = function() { return performance.now(); }
-    Date.start =Date.now();
-    Date.PerfTime = function() { return Date.now() -Date.start; }
+
+function resultado_onclick() {
+	var perfTime = performance.now();
+
+	document.getElementById('resultado').value =gammaLog10(parseInt(document.getElementById("resultado").value));
+	document.getElementById("perfTime").innerText ="perfTime: " + (performance.now() - perfTime) + " millisegundos.";
 }
-var result = document.getElementById("perfTime");
-//result.innerText=Date.now();
-//result.innerText=Math.trunc(gammaFn(1000) / Math.LN10);
-//result.innerText=result.innerText + "\n" + Date.PerfTime();
-function resultado_onclick()
-{
-    var calculator = {
-        gammaFn: function response(n) {
-        	
-var perfTime = performance.now();
-n =Math.ceil(gammaFn(n) / Math.LN10);
-document.getElementById("perfTime").innerText ="Obtener este resultado tomó " + (performance.now() - perfTime) + " millisegundos.";
-return n;
-        }
-    };
-return calculator.gammaFn(parseInt(document.getElementById("resultado").value));
-}
-document.getElementById("perfTime").innerText ="Por favor coloque el número para realizar este cálculo";
-//-->
-</script>
-    <script>
-<!--
+	
 //$(document).ready(function() {
 //  $.getJSON('/demo', function(data) {
 //    $('#result').html("Hello, " + data.name);
 //  });
 //});
-      //-->
-    </script>
- 
+//-->
+</script>
 </body>
 </html>
